--- a/WEEK-1/WEEK-2/2a.html
+++ b/WEEK-1/WEEK-2/2a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Working with Tables</title>
+        <title>2a</title>
     </head>
     <body>
         <center><h6>Working with Tables</h6></center>
