--- a/WEEK-4/5A.html
+++ b/WEEK-4/5A.html
@@ -1,24 +1,47 @@
 <!doctype html>
 <html>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5a DOC</title>
     <style>
         h3 {
-            background-color:red;
-            height:50px;
-            width:800px;
-            text-align:left"
+            background-color: red;
+            height: 50px;
+            width: 800px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding-left: 10px;
+        }
+        
+        /* Additional styles for other h3 elements with different background colors */
+        .blue {
+            background-color: #1E90FF;
         }
 
+        .green {
+            background-color: rgb(34,139,34);
+        }
+
+        .rgba {
+            background-color: rgba(255,99,71,0.7);
+        }
+
+        .hsl {
+            background-color: hsl(240,100%,50%);
+        }
+
+        .hsla {
+            background-color: hsla(120,60%,70%,0.6);
+        }
     </style>
-    <body style="align-items:center" >
-        <h1>CSS Color reference</h1>
-        <h3>Color Name : Red</h3>
-        <h3 style="background-color: #1E90FF; height:50px; width:800px ; text-align:left">HEX Value: #1E90FF </h3>
-        <h3 style="background-color: rgb(34,139,34); height:50px; width:800px ; text-align:left">RGB Value : rgb(34,139,34) </h3>
-        <h3 style="background-color: rgba(255,99,71,0.7); height:50px; width:800px ; text-align:left">RGBA value : rgba(256,99,71,0.7)</h3>
-        <h3 style="background-color: hsl(240,100%,50%); height:50px; width:800px ; text-align:left">HSL Value : hsl(240,100%,50%)</h3>
-        <h3 style="background-color: hsla(120,60%,70%,0.6); height:50px; width:800px ; text-align:left">HSLA value : hsla(120,60%,70%,0.6)</h3>
+    <body>
+        <h1>CSS Color Reference</h1>
+        <h3>Color Name: Red</h3>
+        <h3 class="blue">HEX Value: #1E90FF</h3>
+        <h3 class="green">RGB Value: rgb(34,139,34)</h3>
+        <h3 class="rgba">RGBA Value: rgba(255,99,71,0.7)</h3>
+        <h3 class="hsl">HSL Value: hsl(240,100%,50%)</h3>
+        <h3 class="hsla">HSLA Value: hsla(120,60%,70%,0.6)</h3>
     </body>
 </html>
