--- a/WEEK-4/5B.html
+++ b/WEEK-4/5B.html
@@ -1,40 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Image Demo</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            width: 100%;
-            height: 100vh;
-            background-image: url('background.jpg'); /* Replace with your image */
-            background-repeat: repeat-x; /* Repeat horizontally */
-            background-position: center center;
-            background-attachment: fixed; /* Keep background fixed */
-        }
-        .content {
-            background: white;
-            padding: 20px;
-            position: relative;
-            z-index: 1;
-        }
-    </style>
+<title>5b.html</title>   
 </head>
 <body>
-
-    <div class="content">
-        <h1>Background Image Demo</h1>
-        <p>This page demonstrates a background image fixed halfway down, repeated horizontally, and remaining in place during scrolling.</p>
-    </div>
-
-    <div class="container"></div>
-
+    <style>
+        body
+        {
+         background-color: rgb(235, 230, 230);
+         background-image:url("https://assets.vogue.in/photos/65a0e298016393985a033fd8/3:4/w_2560%2Cc_limit/Snapinsta.app_415998302_18405912274006330_5168793196915324834_n_1080.jpg");
+         background-repeat:repeat-x;
+         background-attachment: fixed;
+         background-position:60%;
+         background-size: 500px; 
+        }
+       </style>
+    
+    <h1 align="center">
+        Background image Demo</h1>
+    <p align="center">This page demonstated backgrund pictures fixed halfway down,repeated horizontally,and remaining place during the scrolling</p>
 </body>
 </html>
