--- a/WEEK-5/6A.html
+++ b/WEEK-5/6A.html
@@ -43,3 +43,7 @@
     </script>
 </body>
 </html>
+#java script
+function changeTextExternal() {
+    document.getElementById("external-demo").innerHTML = "This text is updated using external JavaScript!";
+}
