--- a/WEEK-5/6B.html
+++ b/WEEK-5/6B.html
@@ -1,1 +1,52 @@
-hii
+<!DOCTYPE html><html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Output Methods</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            background-color: #007BFF;
+            color: white;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
+    <script src="output.js"></script>
+</head>
+<body>
+    <h1>JavaScript Output Methods</h1>
+    <button onclick="showAlert()">Show Alert</button>
+    <button onclick="writeToDocument()">Write to Document</button>
+    <button onclick="logToConsole()">Log to Console</button>
+    <button onclick="updateInnerHTML()">Update Inner HTML</button>
+    <p id="output"></p>
+</body>
+</html>
+#js
+function showAlert() {
+    alert("This is an alert message!");
+}
+
+function writeToDocument() {
+    document.write("This text is written using document.write().");
+}
+
+function logToConsole() {
+    console.log("This message is logged to the console.");
+}
+
+function updateInnerHTML() {
+    document.getElementById("output").innerHTML = "This text is updated using innerHTML!";
+}
